# Log

./: .gitignore  CMakeLists.txt  LICENSE  Log.h  README.md  main  main.cpp  main2.cpp
